# rh56dfx_description

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
config/left/: joint_limits.yaml  joint_names.yaml  ros2_controllers.yaml
launch/: display.launch.py
meshes/left/collision/: left_hand_base.STL  left_index_1.STL  left_index_2.STL  left_index_pad.STL  left_index_rubber_1.STL  left_index_rubber_2.STL  left_index_tip.STL  left_little_1.STL  left_little_2.STL  left_little_pad.STL  left_little_rubber_1.STL  left_little_rubber_2.STL  left_little_tip.STL  left_middle_1.STL  left_middle_2.STL  left_middle_pad.STL  left_middle_rubber_1.STL  left_middle_rubber_2.STL  left_middle_tip.STL  left_palm.STL  left_ring_1.STL  left_ring_pad.STL  left_ring_rubber_1.STL  left_ring_rubber_2.STL  left_ring_tip.STL  left_thumb_1.STL  left_thumb_2.STL  left_thumb_3.STL  left_thumb_4.STL  left_thumb_pad.STL  left_thumb_rubber_1.STL  left_thumb_rubber_2.STL  left_thumb_rubber_3.STL  left_thumb_tip.STL  left_wrist_base_link.STL  left_wrist_yaw.STL
meshes/left/visual/: left_hand_base.STL  left_index_1.STL  left_index_2.STL  left_index_pad.STL  left_index_rubber_1.STL  left_index_rubber_2.STL  left_index_tip.STL  left_little_1.STL  left_little_pad.STL  left_little_rubber_1.STL  left_little_rubber_2.STL  left_little_tip.STL  left_middle_1.STL  left_middle_2.STL  left_middle_pad.STL  left_middle_rubber_1.STL  left_middle_rubber_2.STL  left_middle_tip.STL  left_palm.STL  left_ring_1.STL  left_ring_2.STL  left_ring_pad.STL  left_ring_rubber_1.STL  left_ring_rubber_2.STL  left_ring_tip.STL  (+11 more)
rviz/: rh56dfx_left.rviz  rh56dfx_right.rviz
tutorials/: 01 visualise the hand.md  02_embed_in_your_robot.md  03 understanding mimic joints.md  03_understanding_mimic_joints.md  04 xacro vs macro.md
urdf/: rh56dfx.xacro  rh56dfx_left.csv  rh56dfx_macro.xacro  rh56dfx_right.csv
(+72 files in other folders)
