<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>rh56dfx_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro description package for Inspire RH56DFX hand</description>

  <maintainer email="omkar.kshirsagar@ipa.fraunhofer.de">
    Omkar Chandrakant Kshirsagar
  </maintainer>

  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
